vlib/v/checker/tests/match_type_node_with_non_sum_type_err.vv
fn main() {
	b := i64(100)

	match b {
		i64 { println('i64') }
		100 { println(100) }
		else {}
	}
}
